# obs-studio

./: CMakeLists.txt
.github/workflows/: main.yml
CI/: full-build-macos.sh
CI/flatpak/: com.obsproject.Studio.json
UI/: CMakeLists.txt  obs-app.cpp  platform-osx.mm  platform.hpp  window-basic-main.cpp  window-basic-settings.cpp
UI/frontend-plugins/aja-output-ui/: CMakeLists.txt
cmake/Modules/: CopyMSVCBins.cmake
libobs/: CMakeLists.txt
libobs-d3d11/: d3d11-subsystem.cpp
plugins/aja/: CMakeLists.txt
plugins/obs-ffmpeg/: obs-ffmpeg-nvenc.c
